--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/Image/img.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('Image/img.jpg');
     background-size: cover;
     background-position: center;
     color: white;
